@@ -13,6 +13,8 @@ PyObjC NEWS</title>
 <ul>
 <li>(UNFINISHED) New RemotePyInterpreter example that demonstrates an
 out-of-process Python interpreter (primarily for IDE uses).</li>
+<li>New <code><span>objc.protocolsForClass</span></code> function that returns a list of protocols
+that the class directly claims to conform to.</li>
 <li>PyObjC classes can now declare that they implement formal protocols,
 for example:<pre>
 class MyLockingClass(NSObject, objc.protocolNamed('NSLocking')):
